fix: spacing around github link

--- a/src/layouts/docs/docs-layout.module.css
+++ b/src/layouts/docs/docs-layout.module.css
@@ -53,3 +53,7 @@
     max-width: 100%;
   }
 }
+
+.editOnGithubLink {
+  margin-top: 64px;
+}
